# LogLens-AI

./: .dockerignore  .gitignore  BENCHMARK.md  DOCKER.md  DOCUMENTATION.md  Dockerfile  README.md  benchmark_labeled.py  docker-compose.yml  eval_harness.py  pyproject.toml  try_it.py
.github/workflows/: ci.yml  docker-publish.yml
scripts/: fetch_benchmark.sh
src/loglens/: __init__.py  alerts.py  api.py  cli.py  handler.py  live.py  models.py  monitor.py
src/loglens/llm/: __init__.py  providers.py  rca.py
src/loglens/output/: html_report.py  report.py  terminal.py
src/loglens/pipeline/: benchmark.py  deep_embeddings.py  detector.py  embeddings.py  grouping.py  parser.py  run.py  speedbench.py  synonyms.py  templates.py  turbo.py  worker.py
src/loglens/pipeline/ingestion/: __init__.py  command.py  file.py  http.py  stdin.py
tests/: test_accuracy.py  test_benchmark.py  test_cli.py  test_detector.py  test_embeddings.py  test_ingestion.py  test_llm.py  test_monitor.py  test_parser.py  test_sdk.py  test_worker.py
tests/fixtures/: generate_logs.py
