[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loglens"
version = "0.2.0"
description = "AI-powered CLI for intelligent log analysis and anomaly detection"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.6",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
]

[project.scripts]
loglens = "loglens.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/loglens"]

[tool.pytest.ini_options]
asyncio_mode = "auto"